feature #2658: add shareable option to kvm disks

--- a/src/vmm_mad/exec/vmm_exec_kvm.conf
+++ b/src/vmm_mad/exec/vmm_exec_kvm.conf
@@ -21,7 +21,7 @@
 #  - os [kernel,initrd,boot,root,kernel_cmd,arch]
 #  - vcpu
 #  - features [acpi, pae]
-#  - disk [driver, cache, io]
+#  - disk [driver, cache, io, shareable]
 #  - nic  [filter, model]
 #  - raw
 # NOTE: raw attribute value is appended to that on the VM template
